--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "A carefully curated collection of Root Certificates for validating the trustworthiness of SSL certificates while verifying the identity of TLS hosts. It has been extracted from the Python Requests project",
   "license": "MIT",
-  "repository": "sindresorhus/node-certifi",
+  "repository": "certifi/node-certifi",
   "author": {
     "name": "Sindre Sorhus",
     "email": "sindresorhus@gmail.com",
