--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "certifi",
-  "version": "0.1.0",
+  "version": "14.05.14",
   "description": "A carefully curated collection of Root Certificates for validating the trustworthiness of SSL certificates while verifying the identity of TLS hosts. It has been extracted from the Python Requests project",
-  "license": "MIT",
+  "license": "MPL",
   "repository": "certifi/node-certifi",
   "author": {
     "name": "Sindre Sorhus",
